# productivity-copilot-env

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  upload_hf.py
data_pipeline/: __init__.py  build_rag.py  config.py  evaluate.py  generate_data.py  inference.py  preprocess.py  requirements.txt  run_pipeline.py  train_models.py
model_artifacts/: distraction_scorer.pkl  failure_predictor.pkl  feature_columns.json  feature_scaler.pkl  metrics.json  work_style_label_encoder.pkl
productivity_env/: __init__.py  env.py  models.py
server/: app.py
vectorstore/: chroma.sqlite3
