[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "productivity-copilot-env"
version = "0.1.0"
description = "A Productivity Copilot OpenEnv Simulation"
requires-python = ">=3.11"
authors = [
    {name = "productivity_hacker"}
]
dependencies = [
    "openenv-core",
    "pydantic",
    "numpy",
    "scikit-learn",
    "joblib",
    "fastapi",
    "uvicorn",
    "openai",
    "huggingface_hub"
]

[project.optional-dependencies]
ml = []

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["productivity_env", "productivity_env.*", "data_pipeline", "data_pipeline.*"]
